# devcontainer_base

./: Makefile  README.md
.agents/skills/devcontainer-base-creator/: SKILL.md
.agents/skills/devcontainer-base-creator/agents/: openai.yaml
.agents/skills/devcontainer-base-creator/references/: integration-checklist.md  repo-template-rules.md
.agents/skills/devcontainer-feature-selector/: SKILL.md
.agents/skills/devcontainer-feature-selector/agents/: openai.yaml
.agents/skills/formatter-selector/: SKILL.md
.agents/skills/formatter-selector/agents/: openai.yaml
.agents/skills/formatter-selector/references/: tooling-research-guidelines.md
.agents/skills/linter-selector/: SKILL.md
.agents/skills/linter-selector/agents/: openai.yaml
.agents/skills/linter-selector/references/: devcontainer-features.md  tooling-research-guidelines.md
.agents/skills/pre-commit-tooling-selector/: SKILL.md
.agents/skills/pre-commit-tooling-selector/agents/: openai.yaml
.agents/skills/pre-commit-tooling-selector/references/: pre-commit-integration-guidelines.md  tooling-research-guidelines.md
.githooks/: post-commit
base/: .gitignore  README.md
base/.devcontainer/: devcontainer.json  post-create.sh
completions/: _devcontainer-base  devcontainer-base.bash
node/: .gitignore  README.md  eslint.config.mjs  package.json  tsconfig.json
node/.devcontainer/: devcontainer.json  post-create.sh
node/.husky/: pre-commit
python/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python/.devcontainer/: devcontainer.json  post-create.sh
