[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-template"
version = "0.1.0"
description = "Python development template for devcontainer-base."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=4.3.0",
  "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.format]
docstring-code-format = true
